# biblioteca-digital-aed

./: .gitignore  CMakeLists.txt  README  README.md
.run/: biblioteca_digital_aed.run.xml
include/aplicacao/casos_de_uso/: caso_de_uso.h
include/aplicacao/casos_de_uso/autores/: inserir.h
include/aplicacao/casos_de_uso/cidades/: inserir.h
include/aplicacao/casos_de_uso/editoras/: inserir.h
include/aplicacao/casos_de_uso/emprestimos/: listar_devolucao_atrasada.h  realizar_devolucao.h  realizar_emprestimo.h
include/aplicacao/casos_de_uso/genero/: inserir.h
include/aplicacao/casos_de_uso/generos/: inserir.h
include/aplicacao/casos_de_uso/livros/: inserir.h  listar_emprestados.h
include/aplicacao/casos_de_uso/pessoas/: inserir.h
include/aplicacao/tabelas/: repositorio.h  tabela.h
include/apresentacao/tui/: renderizador.h
include/apresentacao/tui/componentes/: breadcrumb.h  componente_seguro.h  layout_aplicacao.h  tabela.h
include/apresentacao/tui/telas/: fabrica.h  inicio.h  menu.h  tela.h  tela_reserva.h
include/dominio/arquivos/: arquivo.h  autor.h  cidade.h  editora.h  emprestimo.h  genero.h  livro.h  pessoa.h
include/dominio/excecoes/comuns/: arquivo_nao_existe.h  excedeu_maximo.h  id_negativo.h  id_negativo_exception.h  propriedade_vazia.h
include/dominio/excecoes/emprestimo/: devolucao_ja_realizada.h
include/dominio/excecoes/livro/: autor_nao_existe.h  (+3 more)
include/utils/: app_info.h  busca_binaria.h  date.h  mascarar_cpf.h  menu.h  terminal_colors.h  terminal_header.h  utf8_length.h
src/: main.cpp
src/apresentacao/tui/: renderizador.cpp
(+34 files in other folders)
